<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_premium"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PremiumActivity">

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/back_btn"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/back"
        app:tint="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_full_experience"
        android:layout_below="@+id/back_btn"
        android:layout_marginStart="25dp"
        android:textStyle="bold"
        android:id="@+id/h1"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fake_location_image"
        android:layout_below="@+id/h1"
        android:id="@+id/h2"
        android:layout_marginStart="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="25dp"
        android:layout_below="@id/h2"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:drawablePadding="5dp"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/tick_green"
            android:text="@string/access_to_all_features"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:drawablePadding="5dp"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/tick_green"
            android:text="@string/new_filters_effects_added_weekly"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:drawablePadding="5dp"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/tick_green"
            android:text="@string/no_ads_evermore"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_info"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawablePadding="5dp"
            android:text="@string/fake_location_image"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginStart="5dp"
            app:drawableStartCompat="@drawable/a_cong"
            app:drawableTint="@color/black" />
    </LinearLayout>
    <TextView
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:background="@drawable/trial_btn"
        android:backgroundTint="#F991D5"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/trial_btn"
        android:orientation="vertical"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_medium"
        android:text="@string/_15_99_one_time_purhase"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:id="@+id/trial_btn"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:background="@drawable/trial_btn"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/bottom_info"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7_day_free_trial"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/then_7_99_year"
            android:textSize="8sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_medium"/>
    </LinearLayout>
</RelativeLayout>